--- a/flowProj/package.json
+++ b/flowProj/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "flowProj",
+  "name": "flowproj",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "flow": "flow",
+    "flow-stop": "flow stop"
   },
   "dependencies": {
     "react": "16.0.0",
@@ -13,6 +15,7 @@
   "devDependencies": {
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "flow-bin": "^0.57.3",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0"
   },
