--- a/imoapp/package.json
+++ b/imoapp/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^0.17.1",
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "reactive-redux": "^1.1.0",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
